--- a/createData.ipynb
+++ b/createData.ipynb
@@ -30,10 +30,10 @@
       "metadata": {
         "id": "eUM2_xAbksVf",
         "colab_type": "code",
-        "outputId": "d691f8c3-3b29-4c7e-a9fa-18232cb3139c",
+        "outputId": "6c9a16dd-e3f6-494b-b036-39ecf7cc3a9c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 127
+          "height": 120
         }
       },
       "source": [
@@ -49,7 +49,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive', force_remount = True)"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -69,21 +69,23 @@
       "metadata": {
         "id": "tmzbYg1Hl48u",
         "colab_type": "code",
+        "outputId": "00d4327a-7731-4776-9cd6-a19a5487961b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 953
-        },
-        "outputId": "2f17266c-a45a-4dba-8714-e7273a43f313"
+          "height": 500
+        }
       },
       "source": [
         "from tqdm import tqdm\n",
         "from google.colab.patches import cv2_imshow\n",
         "\n",
-        "# DATADIR = \"/content/gdrive/My Drive/Colab Notebooks/\"\n",
+        "# DATADIR = \"/content/gdrive/My Drive/Colab Notebooks/images/\"\n",
         "# CATEGORIES = [\"inputs\",\"outputs\"]\n",
         "\n",
         "PATCH_SIZE_X = 32\n",
         "PATCH_SIZE_Y = 32\n",
+        "HALF_PATCH_X = int(PATCH_SIZE_X/2)\n",
+        "HALF_PATCH_Y = int(PATCH_SIZE_Y/2)\n",
         "TOTAL_NUMBER = 2000 # expand from 60 * 33.75 -> 237 * 132 (Quarterize matching patch)\n",
         "\n",
         "input_patches = []\n",
@@ -99,33 +101,32 @@
         "    for num_data in range(TOTAL_NUMBER):\n",
         "        Scartch_Pixel=TOTAL_NUMBER/2\n",
         "        Normal_Pixel=TOTAL_NUMBER/2\n",
-        "        x_random = random.randint(0, img.shape[1] - PATCH_SIZE_X - 1)\n",
-        "        y_random = random.randint(0, img.shape[0] - PATCH_SIZE_Y - 1)\n",
-        "        random_input_patch = img[y_random:y_random+PATCH_SIZE_Y, x_random:x_random+PATCH_SIZE_X]\n",
-        "        random_output_patch = binary_mask[y_random:y_random+PATCH_SIZE_Y, x_random:x_random+PATCH_SIZE_X]\n",
-        "        if (Scartch_Pixel>0 or Normal_Pixel>0):\n",
-        "          if binary_mask[y_random,x_random]==255:\n",
-        "            if Scartch_Pixel>0:\n",
-        "              input_patches.append(random_input_patch)\n",
-        "              output_patches.append(random_output_patch)\n",
-        "              Scartch_Pixel-=1\n",
-        "            else:\n",
-        "              continue\n",
-        "          elif binary_mask[y_random,x_random]==0:\n",
-        "            if Normal_Pixel>0:\n",
-        "              input_patches.append(random_input_patch)\n",
-        "              output_patches.append(random_output_patch)\n",
-        "              Normal_Pixel-=1\n",
-        "            else:\n",
-        "              continue\n",
+        "        x_random = random.randint(HALF_PATCH_X, img.shape[1] - HALF_PATCH_X - 1)\n",
+        "        y_random = random.randint(HALF_PATCH_Y, img.shape[0] - HALF_PATCH_Y - 1)\n",
+        "\n",
+        "        if binary_mask[y_random,x_random]==255:\n",
+        "          if Scartch_Pixel>0:\n",
+        "            random_input_patch = img[y_random-HALF_PATCH_Y:y_random+HALF_PATCH_Y, x_random-HALF_PATCH_X:x_random+HALF_PATCH_X]\n",
+        "            random_output_point = binary_mask[y_random,x_random]\n",
+        "            input_patches.append(random_input_patch)\n",
+        "            output_patches.append(random_output_point)\n",
+        "            Scartch_Pixel-=1\n",
+        "          else:\n",
+        "            continue\n",
+        "        elif binary_mask[y_random,x_random]==0:\n",
+        "          if Normal_Pixel>0:\n",
+        "            random_input_patch = img[y_random-HALF_PATCH_Y:y_random+HALF_PATCH_Y, x_random-HALF_PATCH_X:x_random+HALF_PATCH_X]\n",
+        "            random_output_point = binary_mask[y_random,x_random]\n",
+        "            input_patches.append(random_input_patch)\n",
+        "            output_patches.append(random_output_point)\n",
+        "            Normal_Pixel-=1\n",
+        "          else:\n",
+        "            continue\n",
         "            # normal pixel case\n",
         "\n",
-        "          input_patches.append(random_input_patch)\n",
-        "          output_patches.append(random_output_patch)\n",
         "          \n",
-        "          \n",
-        "          if Scartch_Pixel==0 and Normal_Pixel==0:\n",
-        "            break\n",
+        "        if Scartch_Pixel==0 and Normal_Pixel==0:\n",
+        "          break\n",
         "        \n",
         "\n",
         "input_patches = np.array(input_patches)\n",
@@ -133,54 +134,20 @@
         "\n",
         "\n",
         "\n",
-        "# for category in CATEGORIES:\n",
-        "#     path = os.path.join(DATADIR,category)\n",
-        "#     if category == 'inputs':\n",
-        "#         patches = input_patches\n",
-        "#     elif category == 'outputs':\n",
-        "#         patches = output_patches\n",
         "\n",
-        "#     for image_address in os.listdir(path):\n",
-        "#         img = cv2.imread(os.path.join(path,image_address), cv2.IMREAD_GRAYSCALE)\n",
-        "#         if patches = output_patches:\n",
-        "#           img[img > 10] = 255\n",
-        "#           img[img <= 10] = 0\n",
-        "\n",
-        "#         for xIncrement in range(0, img.shape[1] - PATCH_SIZE + 1, 20):\n",
-        "#             for yIncrement in range(0, img.shape[0] - PATCH_SIZE + 1, 20):\n",
-        "#                 num_data = 0\n",
-        "#                 patch = img[yIncrement:yIncrement + PATCH_SIZE, xIncrement:xIncrement + PATCH_SIZE]\n",
-        "#                 # output_patch = outputImg[yIncrement:yIncrement + PATCH_SIZE, xIncrement:xIncrement + PATCH_SIZE]\n",
-        "#                 patches.append(patch)\n",
-        "#     if category == 'inputs':\n",
-        "#         input_patches = np.array(input_patches)\n",
-        "#     elif category == 'outputs':\n",
-        "#         output_patches = np.array(output_patches)\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "np.save('/content/gdrive/My Drive/Colab Notebooks/images/input.npy', input_patches)\n",
-        "np.save('/content/gdrive/My Drive/Colab Notebooks/images/output.npy', output_patches)\n",
+        "np.save('/content/gdrive/My Drive/Colab Notebooks/images/input_filtered.npy', input_patches)\n",
+        "np.save('/content/gdrive/My Drive/Colab Notebooks/images/output_filtered.npy', output_patches)\n",
         "\n"
       ],
-      "execution_count": 11,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_010.png\n",
-            "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_011.png\n",
-            "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_012.png\n",
-            "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_013.png\n",
             "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_014.png\n",
             "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_015.png\n",
             "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_016.png\n",
             "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_017.png\n",
-            "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_022.png\n",
-            "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_023.png\n",
-            "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_024.png\n",
-            "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_025.png\n",
             "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_030.png\n",
             "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_031.png\n",
             "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_032.png\n",
@@ -188,28 +155,13 @@
             "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_037.png\n",
             "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_038.png\n",
             "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_039.png\n",
-            "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_040.png\n",
-            "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_041.png\n",
-            "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_042.png\n",
             "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_043.png\n",
             "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_044.png\n",
             "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_045.png\n",
-            "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_046.png\n",
-            "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_047.png\n",
-            "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_048.png\n",
-            "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_049.png\n",
             "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_050.png\n",
             "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_051.png\n",
             "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_052.png\n",
             "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_053.png\n",
-            "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_054.png\n",
-            "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_055.png\n",
-            "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_056.png\n",
-            "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_057.png\n",
-            "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_058.png\n",
-            "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_059.png\n",
-            "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_060.png\n",
-            "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_061.png\n",
             "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_066.png\n",
             "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_067.png\n",
             "/content/gdrive/My Drive/Colab Notebooks/images/inputs/mlts_068.png\n",
@@ -231,23 +183,23 @@
       "metadata": {
         "id": "2zZTy-4nCmBe",
         "colab_type": "code",
-        "outputId": "a1e00477-4d5d-44f0-a1ae-5383a5203379",
+        "outputId": "cf7efa71-2b0d-47d5-957f-1de11d420568",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 53
+          "height": 50
         }
       },
       "source": [
         "print(input_patches.shape)\n",
         "print(output_patches.shape)"
       ],
-      "execution_count": 12,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "(208000, 32, 32)\n",
-            "(208000, 32, 32)\n"
+            "(104000, 32, 32)\n",
+            "(104000,)\n"
           ],
           "name": "stdout"
         }
