--- a/train.ipynb
+++ b/train.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "train.ipynb",
       "provenance": [],
-      "toc_visible": true,
+      "collapsed_sections": [],
       "machine_shape": "hm",
       "include_colab_link": true
     },
@@ -31,11 +31,7 @@
       "metadata": {
         "id": "ERNyNP9HtoZB",
         "colab_type": "code",
-        "outputId": "e498be30-f28a-4742-b20c-b95daf45d717",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 163
-        }
+        "colab": {}
       },
       "source": [
         "%tensorflow_version 1.x\n",
@@ -55,58 +51,32 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive', force_remount = True)"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "TensorFlow 1.x selected.\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "Using TensorFlow backend.\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /content/gdrive\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "MqTJTUkwt074",
         "colab_type": "code",
-        "outputId": "cab0e357-31cf-4650-9dac-86f26adfe91a",
+        "outputId": "a160b390-14aa-4910-a409-d78bbdbc05a3",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 827
+          "height": 933
         }
       },
       "source": [
         "\n",
         "batch_size = 128\n",
-        "epochs = 5\n",
+        "epochs = 7\n",
         "\n",
         "# input image dimensions\n",
         "PATCH_SIZE = 32\n",
         "\n",
         "\n",
         "def load_data():\n",
-        "    x = np.load('/content/gdrive/My Drive/Colab Notebooks/input.npy')\n",
-        "    y = np.load('/content/gdrive/My Drive/Colab Notebooks/output.npy')\n",
+        "    x = np.load('/content/gdrive/My Drive/Colab Notebooks/images/input.npy')\n",
+        "    y = np.load('/content/gdrive/My Drive/Colab Notebooks/images/output.npy')\n",
         "    x = x.astype('float32') / 255.\n",
         "    y = y.astype('float32') / 255.\n",
         "    x = np.expand_dims(x, axis=-1)\n",
@@ -117,20 +87,18 @@
         "\n",
         "    return x_train, x_val, y_train, y_val\n",
         "\n",
-        "\n",
         "def get_model():\n",
         "    input_img = Input((PATCH_SIZE, PATCH_SIZE, 1))\n",
-        "    conv1 = Conv2D(32, (9,9), activation='relu', padding='same')(input_img)\n",
-        "    conv2 = Conv2D(64, (9,9), activation='relu', padding='same')(conv1)\n",
+        "    conv1 = Conv2D(32, (5,3), activation='relu', padding='same')(input_img)\n",
+        "    conv2 = Conv2D(64, (5,3), activation='relu', padding='same')(conv1)\n",
         "    conv2 = MaxPooling2D(pool_size=(2, 2))(conv2)\n",
-        "    conv2 = Conv2D(128, (9,9), activation='relu', padding='same')(conv2)\n",
-        "    upsampled_img = UpSampling2D(2)(conv2)\n",
-        "    conv3 = Conv2D(1, (9,9), activation='sigmoid', padding='same')(upsampled_img)\n",
-        "\n",
-        "    model = Model(inputs=[input_img], outputs=[conv3])\n",
+        "    conv3 = Conv2D(128, (5,3), activation='relu', padding='same')(conv2)\n",
+        "    upsampled_img = UpSampling2D(2)(conv3)\n",
+        "    flat = Flatten()(upsampled_img)\n",
+        "    dense = Dense(1, activation = 'sigmoid',)(flat)\n",
+        "    model = Model(inputs=[input_img], outputs=[dense])\n",
         "\n",
         "    return model\n",
-        "\n",
         "\n",
         "x_train, x_val, y_train, y_val = load_data()\n",
         "\n",
@@ -144,7 +112,7 @@
         "tb_callback = TensorBoard(log_dir='./Graph', histogram_freq=0, # might need to modify\n",
         "                          write_graph=True, write_images=True)\n",
         "\n",
-        "checkpoint = ModelCheckpoint('/content/gdrive/My Drive/Colab Notebooks/model.h5', monitor='binary_crossentropy', verbose=1, save_best_only=True, mode='min')\n",
+        "checkpoint = ModelCheckpoint('/content/gdrive/My Drive/Colab Notebooks/images/model.h5', monitor='binary_crossentropy', verbose=1, save_best_only=True, mode='min')\n",
         "\n",
         "cnn_model.fit(x_train, y_train,\n",
         "              batch_size=batch_size,\n",
@@ -152,55 +120,65 @@
         "              verbose=1,\n",
         "              validation_data=(x_val, y_val), callbacks=[tb_callback, checkpoint])\n"
       ],
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "(209456, 32, 32, 1) (52364, 32, 32, 1)\n",
-            "Model: \"model_4\"\n",
+            "(83200, 32, 32, 1) (20800, 32, 32, 1)\n",
+            "Model: \"model_2\"\n",
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "input_4 (InputLayer)         (None, 32, 32, 1)         0         \n",
+            "input_2 (InputLayer)         (None, 32, 32, 1)         0         \n",
             "_________________________________________________________________\n",
-            "conv2d_13 (Conv2D)           (None, 32, 32, 32)        2624      \n",
+            "conv2d_4 (Conv2D)            (None, 32, 32, 32)        512       \n",
             "_________________________________________________________________\n",
-            "conv2d_14 (Conv2D)           (None, 32, 32, 64)        165952    \n",
+            "conv2d_5 (Conv2D)            (None, 32, 32, 64)        30784     \n",
             "_________________________________________________________________\n",
-            "max_pooling2d_4 (MaxPooling2 (None, 16, 16, 64)        0         \n",
+            "max_pooling2d_2 (MaxPooling2 (None, 16, 16, 64)        0         \n",
             "_________________________________________________________________\n",
-            "conv2d_15 (Conv2D)           (None, 16, 16, 128)       663680    \n",
+            "conv2d_6 (Conv2D)            (None, 16, 16, 128)       123008    \n",
             "_________________________________________________________________\n",
-            "up_sampling2d_4 (UpSampling2 (None, 32, 32, 128)       0         \n",
+            "up_sampling2d_2 (UpSampling2 (None, 32, 32, 128)       0         \n",
             "_________________________________________________________________\n",
-            "conv2d_16 (Conv2D)           (None, 32, 32, 1)         10369     \n",
+            "flatten_2 (Flatten)          (None, 131072)            0         \n",
+            "_________________________________________________________________\n",
+            "dense_2 (Dense)              (None, 1)                 131073    \n",
             "=================================================================\n",
-            "Total params: 842,625\n",
-            "Trainable params: 842,625\n",
+            "Total params: 285,377\n",
+            "Trainable params: 285,377\n",
             "Non-trainable params: 0\n",
             "_________________________________________________________________\n",
-            "Train on 209456 samples, validate on 52364 samples\n",
-            "Epoch 1/5\n",
-            "209456/209456 [==============================] - 130s 621us/step - loss: 0.0624 - acc: 0.9877 - binary_crossentropy: 0.0624 - val_loss: 0.0618 - val_acc: 0.9875 - val_binary_crossentropy: 0.0618\n",
+            "Train on 83200 samples, validate on 20800 samples\n",
+            "Epoch 1/7\n",
+            "83200/83200 [==============================] - 11s 132us/step - loss: 0.0653 - acc: 0.9874 - binary_crossentropy: 0.0653 - val_loss: 0.0638 - val_acc: 0.9877 - val_binary_crossentropy: 0.0638\n",
             "\n",
-            "Epoch 00001: binary_crossentropy improved from inf to 0.06245, saving model to /content/gdrive/My Drive/Colab Notebooks/model.h5\n",
-            "Epoch 2/5\n",
-            "209456/209456 [==============================] - 128s 613us/step - loss: 0.0597 - acc: 0.9877 - binary_crossentropy: 0.0597 - val_loss: 0.0604 - val_acc: 0.9875 - val_binary_crossentropy: 0.0604\n",
+            "Epoch 00001: binary_crossentropy improved from inf to 0.06533, saving model to /content/gdrive/My Drive/Colab Notebooks/images/model.h5\n",
+            "Epoch 2/7\n",
+            "83200/83200 [==============================] - 11s 129us/step - loss: 0.0617 - acc: 0.9877 - binary_crossentropy: 0.0617 - val_loss: 0.0591 - val_acc: 0.9877 - val_binary_crossentropy: 0.0591\n",
             "\n",
-            "Epoch 00002: binary_crossentropy improved from 0.06245 to 0.05971, saving model to /content/gdrive/My Drive/Colab Notebooks/model.h5\n",
-            "Epoch 3/5\n",
-            "209456/209456 [==============================] - 128s 612us/step - loss: 0.0593 - acc: 0.9877 - binary_crossentropy: 0.0593 - val_loss: 0.0600 - val_acc: 0.9875 - val_binary_crossentropy: 0.0600\n",
+            "Epoch 00002: binary_crossentropy improved from 0.06533 to 0.06173, saving model to /content/gdrive/My Drive/Colab Notebooks/images/model.h5\n",
+            "Epoch 3/7\n",
+            "83200/83200 [==============================] - 11s 131us/step - loss: 0.0596 - acc: 0.9877 - binary_crossentropy: 0.0596 - val_loss: 0.0571 - val_acc: 0.9877 - val_binary_crossentropy: 0.0571\n",
             "\n",
-            "Epoch 00003: binary_crossentropy improved from 0.05971 to 0.05933, saving model to /content/gdrive/My Drive/Colab Notebooks/model.h5\n",
-            "Epoch 4/5\n",
-            "209456/209456 [==============================] - 129s 614us/step - loss: 0.0590 - acc: 0.9877 - binary_crossentropy: 0.0590 - val_loss: 0.0601 - val_acc: 0.9875 - val_binary_crossentropy: 0.0601\n",
+            "Epoch 00003: binary_crossentropy improved from 0.06173 to 0.05955, saving model to /content/gdrive/My Drive/Colab Notebooks/images/model.h5\n",
+            "Epoch 4/7\n",
+            "83200/83200 [==============================] - 11s 131us/step - loss: 0.0561 - acc: 0.9877 - binary_crossentropy: 0.0561 - val_loss: 0.0533 - val_acc: 0.9877 - val_binary_crossentropy: 0.0533\n",
             "\n",
-            "Epoch 00004: binary_crossentropy improved from 0.05933 to 0.05897, saving model to /content/gdrive/My Drive/Colab Notebooks/model.h5\n",
-            "Epoch 5/5\n",
-            "209456/209456 [==============================] - 129s 616us/step - loss: 0.0588 - acc: 0.9877 - binary_crossentropy: 0.0588 - val_loss: 0.0595 - val_acc: 0.9875 - val_binary_crossentropy: 0.0595\n",
+            "Epoch 00004: binary_crossentropy improved from 0.05955 to 0.05609, saving model to /content/gdrive/My Drive/Colab Notebooks/images/model.h5\n",
+            "Epoch 5/7\n",
+            "83200/83200 [==============================] - 11s 129us/step - loss: 0.0529 - acc: 0.9877 - binary_crossentropy: 0.0529 - val_loss: 0.0541 - val_acc: 0.9877 - val_binary_crossentropy: 0.0541\n",
             "\n",
-            "Epoch 00005: binary_crossentropy improved from 0.05897 to 0.05877, saving model to /content/gdrive/My Drive/Colab Notebooks/model.h5\n"
+            "Epoch 00005: binary_crossentropy improved from 0.05609 to 0.05294, saving model to /content/gdrive/My Drive/Colab Notebooks/images/model.h5\n",
+            "Epoch 6/7\n",
+            "83200/83200 [==============================] - 11s 130us/step - loss: 0.0503 - acc: 0.9876 - binary_crossentropy: 0.0503 - val_loss: 0.0484 - val_acc: 0.9880 - val_binary_crossentropy: 0.0484\n",
+            "\n",
+            "Epoch 00006: binary_crossentropy improved from 0.05294 to 0.05026, saving model to /content/gdrive/My Drive/Colab Notebooks/images/model.h5\n",
+            "Epoch 7/7\n",
+            "83200/83200 [==============================] - 11s 129us/step - loss: 0.0494 - acc: 0.9877 - binary_crossentropy: 0.0494 - val_loss: 0.0471 - val_acc: 0.9878 - val_binary_crossentropy: 0.0471\n",
+            "\n",
+            "Epoch 00007: binary_crossentropy improved from 0.05026 to 0.04937, saving model to /content/gdrive/My Drive/Colab Notebooks/images/model.h5\n"
           ],
           "name": "stdout"
         },
@@ -208,13 +186,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7f57d373ad68>"
+              "<keras.callbacks.History at 0x7f5a1a3ba390>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 3
         }
       ]
     },
